--- a/MikadoProject/appsettings.json
+++ b/MikadoProject/appsettings.json
@@ -1,10 +1,15 @@
 {
-  "Logging": {
-      "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-      }
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
     },
-"AllowedHosts": "*"
+    "AllowedHosts": "*",
+
+    "ConnectionStrings": {
+        "MikadoDataBase": "Server=127.0.0.1;Port=3306;Database=mikado;Uid=root;Pwd=root;"
+    }
 }
+
